--- a/equipos/almeria/amarillas.html
+++ b/equipos/almeria/amarillas.html
@@ -68,7 +68,7 @@
 
                 <h2>Luís Maximiliano</h2>
                 <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/diegoMariño.png">
@@ -76,7 +76,7 @@
 
                 <h2>Fernando Martínez</h2>
                 <h5>3 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -94,7 +94,7 @@
 
                 <h2>Edgar Gonzaléz</h2>
                 <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/alexPozo.png">
@@ -102,7 +102,7 @@
 
                 <h2>Alex Pozo</h2>
                 <h5>4 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/marcPubill.png">
@@ -110,7 +110,7 @@
 
                 <h2>Marc Pubill</h2>
                 <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -125,7 +125,7 @@
 
                 <h2>Álex Centelles</h2>
                 <h5>8 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/chumi.png">
@@ -133,7 +133,7 @@
 
                 <h2>Chumi</h2>
                 <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/cesarMontes.png">
@@ -141,7 +141,7 @@
 
                 <h2>César Montes</h2>
                 <h5>7 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -161,7 +161,7 @@
 
                 <h2>Iddrisu Baba</h2>
                 <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/lucasRobertone.png">
@@ -169,7 +169,7 @@
 
                 <h2>Lucas Robertone</h2>
                 <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/dionLopy.png">
@@ -177,7 +177,7 @@
 
                 <h2>Dion Lopy</h2>
                 <h5>4 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -192,7 +192,7 @@
 
                 <h2>Gonzalo Melero</h2>
                 <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/sergioArribas.png">
@@ -200,7 +200,7 @@
 
                 <h2>Sergio Arribas</h2>
                 <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -220,7 +220,7 @@
 
                 <h2>Largie Ramazani</h2>
                 <h5>4 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/luisSuarez.png">
@@ -228,7 +228,7 @@
 
                 <h2>Luis Suarez</h2>
                 <h5>2 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/adriEmbarba.png">
@@ -236,7 +236,7 @@
 
                 <h2>Adri Embarba</h2>
                 <h5>11 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -251,7 +251,7 @@
 
                 <h2>Léo Baptistao</h2>
                 <h5>6 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/ibrahimaKone.png">
@@ -259,7 +259,7 @@
 
                 <h2>Ibrahima Koné</h2>
                 <h5>1 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/almeria/marezi.png">
@@ -267,7 +267,7 @@
 
                 <h2>Marezi</h2>
                 <h5>0 amarillas</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
