--- a/equipos/barcelona/amarillas.html
+++ b/equipos/barcelona/amarillas.html
@@ -84,16 +84,16 @@
                 </img>
 
                 <h2>Ter Stegen</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/iñakiPeña.png">
                 </img>
 
                 <h2>Iñaki Peña</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -110,24 +110,24 @@
                 </img>
 
                 <h2>João Cancelo</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>6 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/alexBalde.png">
                 </img>
 
                 <h2>Alejandro Balde</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/ronaldAraujo.png">
                 </img>
 
                 <h2>Ronald Araujo</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>6 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -141,24 +141,24 @@
                 </img>
 
                 <h2>Iñigo Martínez</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/andreasChristensen.png">
                 </img>
 
                 <h2>Andreas Christensen</h2>
-                <h5>Defensa Central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>7 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/marcosAlonso.png">
                 </img>
 
                 <h2>Marcos Alonso</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -167,24 +167,24 @@
                 </img>
 
                 <h2>Sergio Roberto</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/julesKounde.png">
                 </img>
 
                 <h2>Jules Koundé</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>8 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/hectorFort.png">
                 </img>
 
                 <h2>Hector Fort</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -202,24 +202,24 @@
                 </img>
 
                 <h2>Gavi</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/pedri.png">
                 </img>
 
                 <h2>Pedri</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/ferminLopez.png">
                 </img>
 
                 <h2>Fermín Lopez</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>5 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -233,16 +233,16 @@
                 </img>
 
                 <h2>Oriol Romeu</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>9 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/frenkieDeJong.png">
                 </img>
 
                 <h2>Frenkie de Jong</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -250,8 +250,8 @@
                 </img>
 
                 <h2>Ilkay Gundogan</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>4 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -270,24 +270,24 @@
                 </img>
 
                 <h2>Ferran Torres</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/robertLewandoski.png">
                 </img>
 
                 <h2>Robert Lewandowski</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>6 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/raphina.png">
                 </img>
 
                 <h2>Raphinha</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>4 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -301,16 +301,16 @@
                 </img>
 
                 <h2>Vitor Roque</h2>
-                <h5>Delantero Centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/barca/lamineYamal.png">
                 </img>
 
                 <h2>Lamine Yamal</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>7 amarillas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Cambiar número de amarillas</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
